WIP：继续完善命令 API